- Use instanceOf expression - Use switch expressions - Inject Random